--- a/client/src/components/Footer.css
+++ b/client/src/components/Footer.css
@@ -147,6 +147,17 @@
   color: var(--secondary-color);
 }
 
+.footer-contact .location-link {
+  display: inline-block;
+  line-height: 1.6;
+  text-decoration: none;
+}
+
+.footer-contact .location-link:hover {
+  color: var(--secondary-color);
+  text-decoration: underline;
+}
+
 .footer-bottom {
   border-top: 1px solid rgba(255, 255, 255, 0.1);
   padding: 25px 0;
